--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TimeKiller</string>
+    <string name="start_map">Launch Map</string>
+    <string name="start_score_board">Top Players</string>
+
 </resources>
