--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">TimeKiller</string>
     <string name="start_map">Launch Map</string>
     <string name="start_score_board">Top Players</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="button_new_event">Create A New HotSpot</string>
+    <string name="button_join_event">Join A HotSpot</string>
+    <string name="post_category_prompt">I want to find a pal for -- </string>
+
 
 </resources>
